plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
	// Base
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Documentation
	runtimeOnly 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	// Data
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	runtimeOnly 'org.postgresql:postgresql'

	// Unique IDs
	implementation 'org.sqids:sqids:0.1.0'

	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
